<resources>
    <string name="app_name">Викторинка</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Great-Larder</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Домашняя страница</string>
    <string name="menu_slideshow">Информация</string>
    <string name="menu_settings">"Настройки"</string>

    <string name="lets">Давай познакомимся</string>
    <string name="done">готово</string>
    <string name="hello">Привет</string>
    <string name="start">начинаем ?</string>

    <string name="question">Вопрос</string>
    <string name="stop">Стоп</string>
    <string name="resume">Продолжить</string>
    <string name="out">Выйти</string>
    <string name="timer">Время :</string>
    <string name="todo">TODO</string>

    <string name="message">Сообщение</string>
    <string name="yes">да</string>
    <string name="no">нет</string>
    <string name="www">www.отличная-кладовая.рф</string>
    <string name="websait">Вэб сайт:</string>
    <string name="_7_999_001_25_95">+7(999)001–25–95</string>
    <string name="phone">Телефон:</string>
    <string name="info_great_larder_ru">info@great-larder.ru</string>
    <string name="email">Электронный адрес:</string>
    <string name="text">По вопросам обращайтесь</string>
    <string name="shop">Магазин</string>
    <string name="language_quiz">Лингвистика</string>
    <string name="sports_quiz">Спортивные</string>
    <string name="school">Школьные</string>
    <string name="traffic_laws">Транспорт</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="partners">Партнеры</string>
    <string name="etiquette">Этикет</string>
    <string name="our_partners">Наши партнеры</string>
    <string name="zamanuha">Здесь можете оказаться Вы</string>
    <string name="city">Город</string>
    <string name="link">info@great-larder.ru</string>
    <string name="enlist_patronage">Заручиться покровительством</string>
    <string name="buy">Купить</string>
    <string name="on_the_account">На счету</string>
    <string name="viktikov">Виктиков</string>
    <string name="viktika">Виктика</string>
    <string name="FairiesGreeting">Заручитесь поддержкой фей и магов</string>
    <string name="zero">0</string>
    <string name="zero_zero">00</string>
    <string name="slogan">Мир вокруг нас постоянно меняется и чтобы держаться на волне, нужно постоянно учиться.
        Научитесь учиться всегда и везде.
    </string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="choose">Выбрать</string>
    <string name="domodedovo">Домодедово</string>
    <string name="our_authors">Наши авторы</string>
    <string name="do_you_want_to_become_an_author">Хотите стать автором и предложить вопрос ?</string>
    <string name="obuhovskay_dariy">Обуховская Дарья\n</string>
    <string name="right_answer">Правильный ответ</string>
    <string name="answer_option_1">Вариант ответа 1</string>
    <string name="answer_option_2">Вариант ответа 2</string>
    <string name="answer_option_3">Вариант ответа 3</string>
    <string name="link_to_the_detailed_answer_in_the_community_quiz_in_vk">Ссылка на развернутый ответ в сообществе
        Викторинка в ВК
    </string>
    <string name="gretting_fragment_questions_from_the_author">Здравствуйте. Заполните поля ниже и нажмите кнопку отправить.
        После проверки Ваш вопрос войдет в список вопросов.
    </string>
    <string name="section">Раздел</string>
    <string name="optional_data">Не обязательные данные :</string>
    <string name="send">Отправить</string>
    <string name="lastname">Фамилия</string>
    <string name="firstname">Имя</string>
    <string name="to_select_an_image_double_click_on_it">чтобы выбрать картинку нажмите дважды на нее</string>
    <string name="textSend">Вместе с вопросом отправятся следующие данные: Ваш ник, возраст,
        город. Добавьте фото(или картинку) для оформления иконки. Если напишите немного о себе -
        пользователи это увидят. Отправляя введенные данные Вы соглашаетесь с тем, что они будут отображены в приложении.
    </string>
    <string name="introduce_yourself">Представьтесь</string>
    <string name="this_is_not_a_mandatory_action">"Это не обязательное действие. Все введенные данные хранятся на этом устройстве. "</string>
    <string name="all_data_is_stored_on_this_device">"Все данные хранятся на этом устройстве"</string>
    <string name="the_history_of_one_street">История одной улицы</string>
    <string name="net_mobile">На Вашем устройстве используется интернет мобильного оператора. Продолжить загрузку новых
        вопросов?  Или отложить до появления WI-FI подключения? Вы всегда можете в ручную обновить вопросы. Для этого
        перейдите в меню, выберите раздел настройки. Нажмите кнопку обновить.
    </string>
    <string name="put_aside">Отложить</string>
    <string name="update_questions">Обновить вопросы</string>
    <string name="account">"Аккаунт"</string>
    <string name="save">Сохранить</string>
    <string name="change">Изменить</string>
</resources>