<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.questions_from_the_author.QuestionsFromAuthorFragment"
        android:orientation="vertical"
        android:layout_margin="15dp">

<LinearLayout android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <TextView
            android:text="@string/gretting_fragment_questions_from_the_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:gravity="center"
            android:minHeight="48dp"
            android:layout_margin="5dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textInputEditTextLastName"
                    android:hint="@string/lastname"
                    android:minHeight="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textInputEditTextFirstName"
                    android:hint="@string/firstname"
                    android:minHeight="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textViewSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/section"
                android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textViewQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question"
                android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textViewRightAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/right_answer"
                android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textViewAnswerOption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_option_1"
                android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textViewAnswerOption2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_option_2"
                android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textViewAnswerOption3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_option_3"
                android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textViewLinkFragmentQuestionsFromAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/link_to_the_detailed_answer_in_the_community_quiz_in_vk"
                android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/sending_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:gravity="center"/>
    <TextView
            android:text="@string/optional_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:textStyle="bold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextTextEmailAddressFQFA"
            android:hint="@string/email"
            android:autofillHints="@string/email"
            android:minHeight="48dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTextPhoneFQFA"
            android:hint="@string/phone"
            android:autofillHints="@string/phone"
            android:minHeight="48dp"/>
    <Button
            android:text="@string/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSendFQFA"
            android:background="@drawable/button_lihguistics"
            android:contentDescription="@string/todo"
            android:elevation="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ru"
            android:stateListAnimator="@null"
            android:layout_margin="25dp"/>
</LinearLayout>
</ScrollView>