<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.slideshow.SlideshowFragment"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:gravity="center" android:background="#797E6F6F">

    <TextView
            android:id="@+id/text_slideshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/hello"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="#070707"/>
    <ImageView
            android:src="@mipmap/logo_foreground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/imageView3"
            android:contentDescription="@string/todo"/>
    <TextView
            android:id="@+id/text_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="#070707"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" android:layout_margin="8dp">
        <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:layout_weight="1"
                android:textColor="#070707"/>
        <TextView
                android:text="@string/info_great_larder_ru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:layout_weight="1"
                android:textColor="#070707"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" android:layout_margin="8dp">
        <TextView
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"
                android:textColor="#070707"/>
        <TextView
                android:text="@string/_7_999_001_25_95"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_weight="1"
                android:textColor="#070707"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" android:layout_margin="8dp">
        <TextView
                android:text="@string/websait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_weight="1"
                android:textColor="#070707"/>
        <TextView
                android:text="@string/www"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_weight="1"
                android:textColor="#070707"/>
    </LinearLayout>

</LinearLayout>