<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center"
        tools:context=".ui.settings.SettingsFragment">
    <Button android:id="@+id/btn_account_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:elevation="5dp"
            android:stateListAnimator="@null"
            android:translationZ="5dp"
            android:background="@drawable/button"
            android:textColor="#090909"
            android:textStyle="bold"
            android:layout_margin="20dp"
            style="?android:attr/buttonBarButtonStyle"/>
    
    <FrameLayout android:id="@+id/frame_layout_user"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center">
                <TextView
                        android:text="@string/lets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewLets"
                        android:gravity="center_horizontal"
                        android:textColor="#0C0C0C"
                        android:textStyle="bold"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/editTextTextPersonName"
                        android:minHeight="48dp"
                        android:autofillHints="@string/firstname"
                        android:hint="@string/introduce_yourself"
                        tools:ignore="LabelFor"
                        android:imeOptions="actionDone"
                        android:singleLine="true"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/editTextTextCity"
                        android:minHeight="48dp"
                        android:autofillHints="@string/city"
                        android:hint="@string/city"
                        tools:ignore="LabelFor"
                        android:imeOptions="actionDone"
                        android:singleLine="true"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal|center_vertical">
                    <EditText
                            android:id="@+id/picked_date"
                            android:hint="@string/date_of_birth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:autofillHints=""
                            android:minHeight="48dp"
                            android:imeOptions="actionDone"
                            android:singleLine="true"/>
                    <Button
                            android:id="@+id/btn_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/choose"
                            android:elevation="5dp"
                            android:stateListAnimator="@null"
                            android:translationZ="5dp"
                            android:background="@drawable/button"
                            android:textColor="#090909"
                            android:textStyle="bold"
                            android:layout_margin="15dp"/>
                </LinearLayout>
                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/imageViewaddImage"
                        android:src="@drawable/upphoto"
                        android:contentDescription="@string/todo"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/all_data_is_stored_on_this_device"
                          android:gravity="center"/>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:gravity="center_horizontal|center_vertical"
                              android:padding="10dp">
                    <Button android:text="@string/save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/buttonDone"
                            android:elevation="5dp"
                            android:stateListAnimator="@null"
                            android:translationZ="5dp"
                            android:background="@drawable/button"
                            android:textColor="#090909"
                            android:textStyle="bold"
                            android:layout_marginBottom="25dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            style="?android:attr/buttonBarButtonStyle"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"/>
                    <Button android:text="@string/change"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/buttonChangeUser"
                            android:elevation="5dp"
                            android:stateListAnimator="@null"
                            android:translationZ="5dp"
                            android:background="@drawable/button"
                            android:textColor="#090909"
                            android:textStyle="bold"
                            android:layout_marginBottom="25dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            style="?android:attr/buttonBarButtonStyle"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"/>
                </LinearLayout>
            </LinearLayout>
    </FrameLayout>
    <Button android:id="@+id/uploadQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_questions"
            android:elevation="5dp"
            android:stateListAnimator="@null"
            android:translationZ="5dp"
            android:background="@drawable/button"
            android:textColor="#090909"
            android:textStyle="bold"
            android:layout_margin="20dp"
            style="?android:attr/buttonBarButtonStyle"
    />
</LinearLayout>