<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment"
        android:id="@+id/fra"
        android:shrinkColumns="0, true"
        android:gravity="center"
        android:paddingBottom="100dp"
        android:orientation="vertical">
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/linearLayoutHello"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
        <TextView
                android:text="@string/hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0C0C0C"
                android:id="@+id/textViewHi"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0C0C0C"
                android:id="@+id/textViewNameUser"
                android:layout_marginStart="10dp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutGlasses"
            android:dividerPadding="30dp"
            android:showDividers="middle"
            android:gravity="bottom|center"
            android:visibility="visible">
        <TextView
                android:text="@string/on_the_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0C0C0C"
                android:id="@+id/textView6"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0C0C0C"
                android:id="@+id/textViewGlasse"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"/>
        <TextView
                android:text="@string/viktikov"
                android:layout_width="wrap_content"
                android:textColor="#0C0C0C"
                android:layout_height="wrap_content"
                android:id="@+id/textFieldVictorinok"
                android:layout_marginStart="10dp"
                tools:ignore="HardcodedText"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"/>
        <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:id="@+id/imageViewAnimCoins"
                android:contentDescription="@string/todo"/>
    </LinearLayout>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/textViewSlogan"
              android:text="@string/slogan"
              android:gravity="center"
              android:textColor="@color/black"
              android:textStyle="bold"
              android:layout_margin="5dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Button"/>
    <ImageView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/imgStartDetki"
               android:contentDescription="@string/todo"
               android:src="@drawable/detki"
               android:layout_margin="5dp"/>
    <Button
            android:text="@string/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonOpenDrav"
            android:elevation="5dp"
            android:stateListAnimator="@null"
            android:translationZ="5dp"
            android:background="@drawable/button"
            android:textColor="#090909"
            android:textStyle="bold"
            android:layout_margin="20dp"
            style="?android:attr/buttonBarButtonStyle"/>

</LinearLayout>